prueba de width

--- a/src/css/VideoBackground.css
+++ b/src/css/VideoBackground.css
@@ -295,10 +295,12 @@
 @media (max-width: 450px) {
     .video-background {
         height: 25vh;
+        width: 100vw;
     }
 
     .embed-responsive {
         height: 25vh;
+        width: 100vw;
     }
 
     .content {
