--- a/src/css/VideoBackground.css
+++ b/src/css/VideoBackground.css
@@ -298,7 +298,7 @@
         width: 100vw;
     }
 
-    .embed-responsive {
+    .embed-responsive-item {
         height: 25vh;
         width: 100vw;
     }
